fix group msg pull problem